--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ραψωδία ε (ενότητα 9)</title>
+    <title>Οδύσσεια - Ραψωδία ε (ενότητα 9)</title>
     <style>
         body {
             text-align: center;
@@ -89,7 +89,7 @@
 </head>
 <body>
     <div class="author">Δημιουργία: Παναγιώτης Δόμβρος 2025 (CC BY-NC)</div>
-    <h1>Ραψωδία ε (ενότητα 9)</h1>
+    <h1>Οδύσσεια - Ραψωδία ε (ενότητα 9)</h1>
     
     <div class="controls">
         <script>
